# cf-mkcli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  layout.py  mkdocs.yml  pyproject.toml
docs/: examples.md  index.md  intro.md  typer-autodoc.md  usage.cast
docs/demo/: auth_init.tape  context.tape  help.tape
docs/guides/: installation.md  usage.md
docs/reference/: api.md  cli.md
examples/: create_cluster_payload.json  create_cluster_simple_payload.json  create_nodepool_simple_payload.json
mkcli/: _version.py  auth.py  main.py  settings.py
mkcli/cli/: auth.py  backup.py  cluster.py  dashboard.py  extension.py  flavors.py  kubernetes_version.py  node_pool.py  regions.py  resource.py
mkcli/cli/auth/: __init__.py  _auth.py  _token.py  context.py  key.py  test__auth.py
mkcli/core/: adapters.py  callback.py  enums.py  exceptions.py  mappings.py  mk8s.py  models.py  session.py  state.py
mkcli/core/models/: __init__.py  backup.py  base.py  cluster.py  context.py  kubernetes_version.py  labels.py  machine_spec.py  node_pool.py  regions.py  request.py  resource_usage.py  token.py
mkcli/tests/: test_main.py
mkcli/utils/: __init__.py  cache.py  console.py  layout.py  names.py  timing.py
tests/: conftest.py  integration.py  test_main.py
tests/cli/: test_cli_auth.py  test_cli_context.py
tests/core/: test_adapters.py  test_context.py
tests/integration/: test_auth_api_token.py  test_cluster_commands.py  test_node_pool_commands.py
tests/src/: bdd_logger.py  log.py
tests/unit/: conftest.py  test_adapters.py  test_cli_auth.py  test_cli_context.py  test_cli_resource.py  test_context.py  test_memory_storage_usage.py  test_session.py  test_token.py
