[tool.poetry]
name = "mkcli"
version = "0.5.1"
description = ""
authors = ["Ewa Adamska <eadamska@cloudferro.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
python-keycloak = "^5.5.1"
typer = "^0.16.0"
loguru = "^0.7.3"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
petname = "^2.6"
ruff = "^0.11.11"
pytest = "^8.3.5"
platformdirs = "^4.3.8"
pytest-mock = "^3.14.1"
pylint = "^3.3.8"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
markdown-include = "^0.8.1"
mkdocs-typer = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkcli = "mkcli.main:cli"
