[tool.poetry]
name = "mkcli"
version = "0.8.1"
description = ""
authors = ["Ewa Adamska <eadamska@cloudferro.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
python-keycloak = "^5.5.1"
typer = "0.20.0"
loguru = "^0.7.3"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
petname = "^2.6"
ruff = "^0.11.11"
pytest = "^8.3.5"
platformdirs = "^4.3.8"
pytest-mock = "^3.14.1"
pylint = "^3.3.8"
pytest-dependency = "^0.6.0"
pytest-order = "^1.3.0"
structlog = "^25.4.0"
getchlib = "^1.1.2"
getchar = "^2.0.0"
readchar = "^4.2.1"
pyperclip = "^1.11.0"
pytest-retry = "^1.7.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
markdown-include = "^0.8.1"
mkdocs-typer = "^0.0.3"
pytest-cov = "^7.0.0"
coverage = "^7.10.6"
vhs = "^1.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkcli = "mkcli.main:run"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, requires external services)",
]
